--- a/Service.html
+++ b/Service.html
@@ -7,7 +7,7 @@
   <link href="Images/icon.png" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link rel="stylesheet" href="C:\Users\HP\OneDrive\Desktop\WD-1\Assignment-2\Mini Project\CSS\Service.css"> <!-- External CSS -->
+  <link rel="stylesheet" href="CSS/Service.css"> <!-- External CSS -->
 </head>
 <body>
 
