--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="Index.html"><i class="fa-solid fa-camera"></i> Harsh Studio</a>
+      <a class="navbar-brand" href="index.html"><i class="fa-solid fa-camera"></i> Harsh Studio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
