--- a/Contact.html
+++ b/Contact.html
@@ -31,7 +31,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="Index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="Gallery.html">Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="Service.html">Services</a></li>
