--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    body { background-color: #000; color: #fff; font-family: "Comic Sans MS", cursive, sans-serif; }
+    body { background-color: #000; color: #fff; font-family: "Times New Roman", Times, serif; }
     .navbar { background-color: #000; }
     .navbar-nav .nav-link { transition: color 0.3s; }
     .navbar-nav .nav-link:hover { color: #0d6efd !important; }
